# parcelona

./: README.md  pyproject.toml  readme
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yaml
parcelona/: __init__.py  kelvin_effect.py  main.py  parenv.py  water_vapor_Psat.py
parcelona/test/: main_test.py  util_kappa_kohler_test.py  util_kelvin_radius_test.py  util_wvp_test.py  util_wvpsat_test.py  water_vapor_pressure_test.py
parcelona/util/: kappa_kohler.py  kelvin_effect.py  kelvin_radius.py  kevin_radius.py  water_vapor_pressure.py  wvp.py  wvpsat.py
