[project]
name = "parcelona"
description = "a simple, fast, and powerful parcel simulator"
readme = "readme"
requires-python = ">=3.7"
license = {file = "license"}
authors = [
    {name = "Gorkowski", email="Gorkowski@users.noreply.github.com"},
    {name = "ngam", email="ngam@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "atmospheric", "particles", "climate", "aerosol", "particulate",
    "parcel", "clouds",
]

dependencies = ["particula==0.0.10"]

# This is set automatically by flit using `parcelona.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/uncscode/parcelona"
repository = "https://github.com/uncscode/parcelona"

[project.optional-dependencies]
dev = [
    "pylint", "pytest", "autopep8", "jupyterlab", "pytype",
    "typing", "build", "flake8", "jupyter-book", "ghp-import",
    "matplotlib",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
